<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open3d_conversions</name>
  <version>0.1.0</version>
  <description>Provides conversion functions to and from Open3D datatypes</description>
  
  <maintainer email="matnay17@gmail.com">Pranay Mathur</maintainer>
  <maintainer email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

  <license>Apache-2.0</license>

  <author email="matnay17@gmail.com">Pranay Mathur</author>
  <author email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</author>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
